--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,22 @@ body {
   overflow-x: hidden;
 }
 
+button {
+  display: inline-block;
+  padding: 10px 45px;
+  background-color: #96bb7c;
+  color: #ffffff;
+  border-radius: 5px;
+  border: 1px solid #96bb7c;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+button:hover {
+  background-color: transparent;
+  color: #96bb7c;
+}
+
 .layout_padding {
   padding: 90px 0;
 }
